--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
   <body>
     <h1>Login</h1>
     <form action="/users/login" method="POST">
-      <label for="username">Username:</label>
+      <label for="username">name:</label>
       <input type="text" id="username" name="username" required />
 
       <label for="password">Password:</label>
