--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,7 +9,7 @@
   <body>
     <header>Welcome to Your Dashboard</header>
     <div class="container">
-      <h1>Hello, <%= user.username %>!</h1>
+      <h1>Hello, <%= user.Name %>!</h1>
       <ul>
         <li><a href="/meals/update">Update Meal</a></li>
         <li><a href="/meals/history">View Meal History</a></li>
