--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,33 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <header>Login</header>
+    <header>Sign Up</header>
     <div class="container">
-      <h1>Welcome Back</h1>
-      <form action="/users/login" method="POST">
-        <label for="username">Name:</label>
-        <input type="text" id="username" name="username" required />
+      <h1>Create a New Account</h1>
+      <form action="/users/signup" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required />
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required />
+
+        <label for="id">ID:</label>
+        <input type="text" id="id" name="id" required />
 
         <% if (errorMessage) { %>
         <p class="error-message"><%= errorMessage %></p>
         <% } %>
 
-        <button type="submit">Login</button>
+        <button type="submit">Sign Up</button>
       </form>
-
-      <div style="text-align: center; margin-top: 10px">
-        <p>Don't have an account?</p>
-        <a href="/users/signup">
-          <button class="signup-button">Sign Up</button>
-        </a>
-      </div>
     </div>
   </body>
 </html>
