--- a/views/meal_update.ejs
+++ b/views/meal_update.ejs
@@ -37,11 +37,8 @@
         <label for="description">Description</label>
         <input type="text" id="description" name="description" required />
 
-        <label for="bloodSugar">Blood Sugar Level</label>
+        <label for="bloodSugar">Measured Sugar Level (after 2 hours)</label>
         <input type="number" id="bloodSugar" name="bloodSugar" required />
-
-        <label for="foodSugar">Measured Sugar Level (after 2 hours)</label>
-        <input type="number" id="foodSugar" name="foodSugar" required />
 
         <button type="submit">Submit</button>
       </form>
