--- a/public/styles.css
+++ b/public/styles.css
@@ -54,27 +54,35 @@ button:hover {
   background-color: #0056b3;
 }
 
-table {
+.card {
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  padding: 15px;
+  transition: transform 0.2s;
+  width: 250px; /* רוחב כרטיס */
+  position: relative;
+}
+
+.card:hover {
+  transform: scale(1.05); /* אפקט הגדלה כשמחזיקים על הכרטיס */
+}
+
+img {
   width: 100%;
-  border-collapse: collapse;
-  margin: 20px 0;
+  border-radius: 5px;
 }
 
-table,
-th,
-td {
-  border: 1px solid #ddd;
-}
-
-th,
-td {
+.chart-container {
+  display: none; /* הגרף מוסתר כברירת מחדל */
+  width: 100%;
   padding: 10px;
-  text-align: left;
 }
 
-th {
-  background-color: #007bff;
-  color: white;
+.table-container {
+  width: 100%; /* כל אחד לוקח את כל הרוחב */
+  padding: 10px;
 }
 
 .error-message {
