--- a/public/styles.css
+++ b/public/styles.css
@@ -1,91 +1,82 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f2f5;
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Arial", sans-serif;
+}
+
+body {
+  background-color: #f4f4f4;
   color: #333;
 }
 
 header {
   background-color: #007bff;
   color: white;
-  padding: 15px 20px;
   text-align: center;
-  font-size: 24px;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .container {
-  max-width: 1000px;
-  margin: 20px auto;
+  max-width: 400px;
+  margin: 50px auto;
   padding: 20px;
   background-color: white;
   border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
 
-h1,
 h2 {
-  color: #007bff;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
+label {
+  display: block;
+  margin-bottom: 5px;
 }
 
-form input,
-form select,
-form button {
+input[type="text"],
+input[type="password"] {
+  width: 100%;
   padding: 10px;
-  margin: 5px 0;
+  margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  font-size: 16px;
+  transition: border 0.3s;
 }
 
-button {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-.card {
-  background: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  margin: 10px;
-  padding: 15px;
-  transition: transform 0.2s;
-  width: 250px; /* רוחב כרטיס */
-  position: relative;
-}
-
-.card:hover {
-  transform: scale(1.05); /* אפקט הגדלה כשמחזיקים על הכרטיס */
-}
-
-img {
-  width: 100%;
-  border-radius: 5px;
-}
-
-.chart-container {
-  display: none; /* הגרף מוסתר כברירת מחדל */
-  width: 100%;
-  padding: 10px;
-}
-
-.table-container {
-  width: 100%; /* כל אחד לוקח את כל הרוחב */
-  padding: 10px;
+input[type="text"]:focus,
+input[type="password"]:focus {
+  border-color: #007bff;
 }
 
 .error-message {
   color: red;
-  font-size: 14px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.login-button,
+.signup-button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+.login-button:hover,
+.signup-button:hover {
+  background-color: #0056b3;
+}
+
+.signup-container {
+  text-align: center;
+  margin-top: 15px;
 }
