--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <header>Login</header>
+    <header>
+      <h1>Login</h1>
+    </header>
     <div class="container">
-      <h1>Welcome Back</h1>
-      <form action="/users/login" method="POST">
+      <h2>Welcome Back</h2>
+      <form action="/users/login" method="POST" class="login-form">
         <label for="username">Name:</label>
         <input type="text" id="username" name="username" required />
 
@@ -21,10 +23,10 @@
         <p class="error-message"><%= errorMessage %></p>
         <% } %>
 
-        <button type="submit">Login</button>
+        <button type="submit" class="login-button">Login</button>
       </form>
 
-      <div style="text-align: center; margin-top: 10px">
+      <div class="signup-container">
         <p>Don't have an account?</p>
         <a href="/users/signup">
           <button class="signup-button">Sign Up</button>
