--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -167,7 +167,7 @@
     <img
       src="/images/logo.png"
       alt="Health App Logo"
-      style="height: 40px float: right;"
+      style="height: 40px; float: right"
     />
     <div class="container">
       <h1>Hello, <%= user.Name %>!</h1>
