--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
+    <nav>
+      <div class="logo">SugarWize</div>
+      <div class="menu">
+        <a href="/users/login">Home</a>
+        <a href="#" id="about-link">About</a>
+        <span class="tooltip">
+          Our app is designed to empower users in managing their dietary intake
+          effectively. By logging meals, users can accurately track their blood
+          sugar levels. The app intelligently analyzes this data, providing
+          personalized recommendations on whether users need to increase or
+          decrease their sugar intake. Additionally, it sends timely
+          notifications to keep users informed about their health status,
+          ensuring they never miss a beat. Join us on this journey to better
+          health and wellness!
+        </span>
+        <a href="#">Profile</a>
+      </div>
+    </nav>
     <header>
       <h1>Login</h1>
     </header>
