--- a/views/meal_update.ejs
+++ b/views/meal_update.ejs
@@ -265,6 +265,7 @@
 
             if (contentType && contentType.includes("application/json")) {
               result = await response.json();
+              console.log(result);
 
               if (result.success) {
                 alert(
