--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -192,6 +192,8 @@
       </ul>
       <% } %>
     </div>
-    <footer>© 2024 Health App. All rights reserved.</footer>
+    <footer>
+      <p>&copy; 2024 SugarWize- All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
