--- a/views/meal_update.ejs
+++ b/views/meal_update.ejs
@@ -243,7 +243,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2024 SugarWize. All Rights Reserved.</p>
+      <p>&copy; 2024 SugarWize- All Rights Reserved.</p>
     </footer>
 
     <script>
