--- a/views/login.ejs
+++ b/views/login.ejs
@@ -149,8 +149,8 @@
       <div class="menu">
         <!-- שינוי קל בכפתור ה-Home כדי לאפשר שימוש ב-JavaScript -->
         <a href="#" id="home-link">Home</a>
-        <a href="#" id="about-link">About</a>
-        <span class="tooltip">
+        <a href="/users/about">About</a>
+        <!-- <span class="tooltip">
           Our app is designed to empower users in managing their dietary intake
           effectively. By logging meals, users can accurately track their blood
           sugar levels. The app intelligently analyzes this data, providing
@@ -159,7 +159,7 @@
           notifications to keep users informed about their health status,
           ensuring they never miss a beat. Join us on this journey to better
           health and wellness!
-        </span>
+        </span> -->
         <a href="#">Profile</a>
       </div>
     </nav>
@@ -189,6 +189,9 @@
         </a>
       </div>
     </div>
+    <footer>
+      <p>&copy; 2024 SugarWize- All Rights Reserved.</p>
+    </footer>
 
     <script>
       // משתנה מדמה חיבור משתמש
