organize the folders and the files

--- a/views/meal_update.ejs
+++ b/views/meal_update.ejs
@@ -262,6 +262,9 @@
               body: new URLSearchParams(formData),
             });
 
+            // הוספת אבחון של הסטטוס
+            console.log("Response status:", response.status);
+
             const contentType = response.headers.get("content-type");
             let result;
 
