--- a/views/login.ejs
+++ b/views/login.ejs
@@ -167,7 +167,7 @@
     <img src="/images/logo.png" alt="Health App Logo" style="height: 300px" />
 
     <div class="container">
-      <h2>Welcome Back</h2>
+      <h2>Welcome To SugarWize!</h2>
       <form action="/users/login" method="POST" class="login-form">
         <label for="username">Name:</label>
         <input type="text" id="username" name="username" required />
